// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option Button Is checked 1`] = `
.c0 {
  position: absolute;
  z-index: -1;
}

.c0 + label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius-2x);
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
}

.c0:checked + label {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

<div>
  <input
    checked=""
    class="c0"
    id="uuid1"
    name="test"
    type="radio"
    value="2"
  />
  <label
    for="uuid1"
  >
    option
  </label>
</div>
`;

exports[`Option Button Matches the snapshot 1`] = `
.c0 {
  position: absolute;
  z-index: -1;
}

.c0 + label {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius-2x);
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
}

.c0:checked + label {
  background-color: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

<div>
  <input
    class="c0"
    id="uuid1"
    name="test"
    type="radio"
    value="2"
  />
  <label
    for="uuid1"
  >
    option
  </label>
</div>
`;
